Ensure spacing values are using our source of truth variables

--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,4 +1,5 @@
 @import "../../styles/colors.css";
+@import "../../styles/spacing.css";
 @import "../../styles/typography.css";
 
 .table {
@@ -28,7 +29,7 @@
 .cell {
   font-weight: normal;
   line-height: 1.8;
-  padding-left: 0.625em;
+  padding-left: var(--spacing-medium);
 }
 
 .headerCell {
